--- a/src/assets/scss/core/forms/_form-validation.scss
+++ b/src/assets/scss/core/forms/_form-validation.scss
@@ -12,6 +12,7 @@
         height: 19px;
         line-height: 19px;
         text-align: center;
+        font-family: 'NucleoIcons';
         display: inline-block;
         position: absolute;
         right: 15px;
